# tg-userbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  package.json  pnpm-lock.yaml  tsconfig.json
rust_bot/: Cargo.toml  README.md
rust_bot/src/: google_ai.rs  handlers.rs  main.rs
scripts/: deploy.sh
src/: env.ts  index.ts  messages.ts
src/application/useCases/: commandAi.ts  commandGoogle.ts  commandN.ts  commandSummary.ts  commandTldr.ts  commandTranscribeVoice.ts  privateTranscribeVoice.ts
src/domain/: ai.ts  transcriber.ts
src/impl/google/: aiGoogle.ts  transcriberGoogle.ts
src/impl/groq/: aiGroq.ts  transcriberGroq.ts
src/presentation/: bot.ts  handlers.ts
src/telegram/: utils.ts  voice.ts
